<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/try_now"

    >


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"

        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="-155dp">


        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@null"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:scaleX="-1"
            android:src="@drawable/icon_back"
            tools:layout_editor_absoluteX="60dp"
            tools:layout_editor_absoluteY="16dp" /> <!-- flip -->

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/back_add_lesson"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="230dp" />


    </androidx.appcompat.widget.Toolbar>


    <LinearLayout
        android:layout_marginTop="60dp"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layoutDirection="rtl"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="98dp"
        tools:layout_editor_absoluteY="92dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:layout_marginTop="60dp"
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center_vertical"
            android:layoutDirection="rtl"
            android:orientation="horizontal"
            >

            <ImageButton
                android:scaleType="centerCrop"
                android:clipToOutline="true"
                android:background="@drawable/circle_img"
                android:backgroundTint="@null"
                android:id="@+id/btnAddPic"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="0dp"
                android:src="@drawable/camera_circle" />


            <EditText
                android:id="@+id/etLessonName"
                android:layout_width="0dp"
                android:layout_height="46dp"
                android:layout_weight="1"
                android:background="@drawable/input_field_layout"
                android:hint="הכנס שם שיעור"
                android:textSize="16sp"
                android:padding="12dp"
                android:inputType="textPersonName"
                android:textAlignment="center" />

        </LinearLayout>
        <LinearLayout
            app:layout_constraintTop_toBottomOf="@+id/phone"
            android:layout_marginTop="60dp"
            android:id="@+id/short_descrip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center_vertical"
            android:layoutDirection="rtl"
            android:orientation="horizontal"
            >


            <EditText
                android:id="@+id/etShortDis"
                android:layout_width="0dp"
                android:layout_height="46dp"
                android:layout_weight="1"
                android:background="@drawable/input_field_layout"
                android:hint="הכנס תיאור קצר"
                android:textSize="16sp"
                android:padding="12dp"
                android:inputType="textShortMessage"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center_vertical"
            android:layoutDirection="rtl"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/short_descrip">

            <TextView
                android:id="@+id/textAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:text="הוסף וידאו:"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAddVideo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/rounded_small_button"
                android:paddingLeft="8dp"
                android:paddingRight="5dp"
                app:backgroundTint="@null"
                app:icon="@drawable/add_video"
                app:iconGravity="textStart"
                app:iconPadding="5dp"
                app:iconSize="40dp"
                app:iconTint="@null"
                app:layout_constraintBottom_toTopOf="@+id/myHealth"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/button3"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/video_prev"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:layoutDirection="rtl"
            android:layout_gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/age">

            <VideoView
                android:layout_gravity="center"
                android:visibility="gone"
                android:id="@+id/videoPreview"
                android:layout_width="wrap_content"
                android:layout_height="100dp"

                 />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/add_docr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center_vertical"
            android:layoutDirection="rtl"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/age">

            <TextView
                android:id="@+id/textGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="הוסף תיאור:"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAddTxt"
                app:backgroundTint="@null"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/rounded_small_button"
                android:paddingLeft="8dp"
                android:paddingRight="5dp"
                android:textSize="36sp"
                app:icon="@drawable/add_docu"
                app:iconGravity="textStart"
                app:iconPadding="5dp"
                app:iconSize="40dp"
                app:iconTint="@null"
                app:layout_constraintBottom_toTopOf="@+id/myHealth"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/button3"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/first_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center_vertical"
            android:layoutDirection="rtl"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/add_docr">



            <ScrollView
                android:id="@+id/scrollView"
                android:background="@drawable/scrollview_background"
                android:padding="16dp"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:verticalScrollbarPosition="right"
                android:layout_height="120dp">

                <TextView
                    android:id="@+id/textPreview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </ScrollView>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/pick_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center_vertical"
            android:layoutDirection="rtl"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/first_view">

            <ImageView
                android:id="@+id/levels_ic"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginEnd="5dp"
                android:src="@drawable/fitness_level_meter" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="רמה:"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <Spinner
                android:id="@+id/spnLevel"
                android:textSize="16sp"
                android:layout_width="0dp"
                android:layout_height="46dp"
                android:layout_weight="1"
                android:background="@drawable/spinner_style"
                android:entries="@array/my_options"
                android:textAlignment="center" />

        </LinearLayout>



        <LinearLayout
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pick_level">
            <ImageButton
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:background="@android:color/transparent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:padding="0dp"
                android:scaleType="centerCrop"
                android:src="@drawable/save_ic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </LinearLayout>




    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>